# AEGP

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  output.json
Editor/Source/: EditorApplication.cpp  EditorApplication.h  EditorScene.cpp  EditorScene.h  Main.cpp
Engine/: CMakeLists.txt
Engine/Assets/: DefaultTextures.json
Engine/Assets/Shaders/: Sprite.frag  Sprite.vert
Engine/Dependencies/: CMakeLists.txt
Engine/Dependencies/glad/: CMakeLists.txt  README.md
Engine/Dependencies/glad/include/glad/: glad.h
Engine/Dependencies/glad/src/: glad.c
Engine/Dependencies/imgui/: CMakeLists.txt
Engine/Dependencies/miniaudio/: CMakeLists.txt
Engine/Dependencies/stb/: CMakeLists.txt  README.md
Engine/Shaders/: Sprite.vert
Engine/Source/: Application.cpp  Application.h  Audio.cpp  Audio.h  AudioArray.cpp  AudioArray.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  ComponentFactory.cpp  ComponentFactory.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  SceneLoader.cpp  SceneLoader.h  ServiceLocator.cpp  ServiceLocator.h  SystemFactory.cpp  SystemFactory.h  Timer.cpp  Timer.h  Window.cpp  Window.h
Engine/Source/Audio/: Audio.cpp  Audio.h  AudioArray.cpp  AudioArray.h  AudioEngine.cpp  AudioEngine.h  FixedSizeAudioArray.h
Engine/Source/Components/: Camera2D.h  Collider_Static.h  Sprite.h  SpriteAnimator.h
Engine/Source/ECS/: Component.h  Scene.cpp  Scene.h  System.cpp  System.h
Engine/Source/ECS/Components/: AABB.h  Camera2D.h  Collider_Dynamic.h  Collider_Trigger.h  Sprite.h  SpriteAnimator.h  Transform.cpp  Transform.h
Engine/Source/ECS/Systems/: ClearRenderer.cpp  ClearRenderer.h  ClearUI.h  CollisionSystem.cpp  CollisionSystem.h  SpriteRenderer.cpp  SpriteRenderer.h  TimingsSystem.cpp  TimingsSystem.h  UIRenderer.cpp  UIRenderer.h  UpdateSpriteTransforms.cpp  UpdateSpriteTransforms.h
Engine/Source/Input/: InputManager.cpp  InputManager.h
Engine/Source/Renderer/: RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.h  SpriteRenderPass.cpp  SpriteRenderPass.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Engine/Source/Scene/: ComponentFactory.cpp  ComponentFactory.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SystemFactory.cpp  SystemFactory.h
Engine/Source/Systems/: ClearRenderer.cpp  ClearRenderer.h  ClearUI.cpp  ClearUI.h  CollisionSystem.cpp  CollisionSystem.h  SpriteRenderer.cpp  SpriteRenderer.h  System.cpp  TimingsSystem.cpp  TimingsSystem.h  UIRenderer.cpp  UIRenderer.h
Engine/Source/Utils/: Logger.h  Random.h  ServiceLocator.cpp
Game/Assets/: HelloScene.json  PrototypeScene.json  atlas.json
Game/Source/: AudioManagerSystem.cpp  AudioManagerSystem.h  CameraFollowSystem.cpp  CameraFollowSystem.h  HelloApplication.cpp  HelloApplication.h  HelloScene.cpp  HelloScene.h  HelloSystem.cpp  HelloSystem.h  Main.cpp  MoveSystem.cpp  MoveSystem.h  PlayerCollisionSystem.cpp  PlayerCollisionSystem.h  PlayerController.h  PlayerControllerTag.h  PrototypeApplication.cpp  PrototypeApplication.h  TestLevelGeneration.cpp  TestLevelGeneration.h  TestbedApplication.cpp  TestbedApplication.h  main.cpp
